# ecomm_product_assistant

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: deploy.yml  infra.yml
data/: product_reviews.csv
infra/: eks-with-ecr.yaml
k8/: deployment.yaml
notebook/: test.ipynb
prod_assistant/exception/: custom_exception.py
prod_assistant/mcp_servers/: client.py  product_search_server.py
prod_assistant/retriever/: retrieval.py
prod_assistant/utils/: model_loader.py
prod_assistant/workflow/: agentic_rag_workflow.py  agentic_workflow_with_mcp_websearch.py  normal_generation_workflow.py
